concord_macros/tests/trybuild/fail/sema/policy/rate_limit_key_binding_secret_ref.rs
use concord_macros::api;

api! {
    client RateLimitKeySecretApi {
        base "https://example.com"
        secret token: String
    }

    GET Ping(tenant: String)
        path ["ping"]
        rate_limit key tenant_key = secret.token
        -> Json<String>
}

fn main() {}
