concord_macros/tests/trybuild/fail/sema/policy/rate_limit_key_binding_secret_ref.stderr
error: DSL-001 unknown endpoint clause
  --> tests/trybuild/fail/sema/policy/rate_limit_key_binding_secret_ref.rs:11:43
   |
11 |         rate_limit key tenant_key = secret.token
   |                                           ^
